<resources>
    <string name="app_name">Tu Himnario Adventista</string>
    <string name="himnos_list">Lista de himnos</string>
    <string name="about_string">Acerca de...</string>
    <string name="minus_size_string">Reducir tamaño</string>
    <string name="plus_size_string">Aumentar tamaño</string>
    <string name="action_search">Busqueda de himnos</string>
    <string name="placeholder_himno">Número de Himno</string>
    <string name="placeholder_himno_old">Número de Himno (Antiguo)</string>
    <string name="rate_app">Calificar aplicación</string>
    <string name="share_app">Compartir</string>
    <string name="version_himno">Antiguo</string>
    <string name="banner_ad_unit_id">ca-app-pub-5411285117883478/1817419345</string>
    <string name="banner_ad_unit_id_land">ca-app-pub-5411285117883478/2814644541</string>
    <string name="ads_id">ca-app-pub-5411285117883478~9340686141</string>
    <string name="about_music">Musicas</string>
    <string name="play_string">Reproducir</string>
    <string name="download_string">Descargar</string>

    <string name="about_contenido">Contenido</string>
    <string name="feliz_sabado">Feliz Sábado ;)</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="night_mode">Modo nocturno</string>
    <string name="title_share">Compartir</string>
    <string name="title_rate">Calificar</string>
    <string name="privacy_policy">Politicas de Privacidad</string>
    <string name="title_about">Acerca de...</string>
    <string name="show_partiture">Partitura</string>
    <string name="url_firebase">gs://tu-himnario-adventista.appspot.com</string>
    <string name="no_internet">No hay internet</string>
</resources>
