<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:checked="true"
            android:title="Inicio" />
        <item
            android:id="@+id/nav_music"
            android:title="Descargas" />
        <item
            android:id="@+id/nav_contenido"
            android:title="Contenido" />
        <item
            android:id="@+id/nav_history"
            android:title="Historial" />

    </group>
    <item android:title="Sé social">
        <menu>
            <item
                android:id="@+id/nav_mode"
                android:title="@string/night_mode"
                app:actionLayout="@layout/action_view_switch" />
            <item
                android:id="@+id/nav_version"
                android:title="@string/version_himno"
                app:actionLayout="@layout/action_view_switch" />
            <item
                android:id="@+id/nav_share"
                android:title="@string/title_share" />
            <item
                android:id="@+id/nav_rate"
                android:title="@string/title_rate" />
            <item
                android:id="@+id/nav_privacy"
                android:title="@string/privacy_policy" />
            <item
                android:id="@+id/nav_about"
                android:title="@string/title_about" />
        </menu>
    </item>
</menu>
